Updated R4 test to be own methods. All tests pass